# fast_api_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  schema.py
.github/workflows/: tests.yml
backend/: main.py  schema.py
src/: __init__.py  main.py  schema.py  tasks.db
src/books/: book_data.py  models.py  routes.py
src/db/: database.py  main.py  models.py
src/domain/selector/: task.py
src/domain/service/: create_task.py  task.py
tests/: test_endpoints.py
