[project]
name = "fastapi-app"
version = "0.1.0"
description = "A CRUD backend app using fastapi"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard,stander]>=0.128.0",
    "greenlet>=3.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.31",
]
